--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
     stroke-width: 10;
     stroke-dasharray: 450;
     /* stroke-dashoffset: 200; */
-    transform: translate(0 50%);
+    /* transform: translate(0 50%); */
 }
 
 svg{
