--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
     fill: none;
     stroke: url(#GradientColor);
     stroke-width: 7;
-    stroke-dasharray: 450;
+    /* stroke-dasharray: 450; */
     /* stroke-dashoffset: 200; */
     /* transform: translate(0 50%); */
 }
